Added RAG pipeline.

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 openai
-langchain==0.0.320
+langchain
 python-dotenv
-chromadb==0.5.0
 langchain-openai
 pypdf
 langchain-community
-google-search-results
+beautifulsoup4
+faiss-cpu
+langchain-text-splitters
+langchainhub
