Implemented json format

--- a/src/modules/news_summary/tickers.yaml
+++ b/src/modules/news_summary/tickers.yaml
@@ -1,3 +1,18 @@
 Ethereum_(ETH): https://news.google.com/search?q=etherium%20(ETH)&hl=en-US&gl=US&ceid=US%3Aen
 Tether_(USDT): https://news.google.com/search?q=Tether%20(USDT)&hl=en-US&gl=US&ceid=US%3Aen
 Binance_Coin_(BNB): https://news.google.com/search?q=Binance%20Coin%20(BNB)&hl=en-US&gl=US&ceid=US%3Aen
+USD_Coin_(USDC): https://news.google.com/search?q=USD%20Coin%20(USDC)&hl=en-US&gl=US&ceid=US%3Aen
+Solana_(SOL): https://news.google.com/search?q=Solana%20(SOL)&hl=en-US&gl=US&ceid=US%3Aen
+XRP_(XRP): https://news.google.com/search?q=XRP%20(XRP)&hl=en-US&gl=US&ceid=US%3Aen
+Cardano_(ADA): https://news.google.com/search?q=Cardano%20(ADA)&hl=en-US&gl=US&ceid=US%3Aen
+Dogecoin_(DOGE): https://news.google.com/search?q=Dogecoin%20(DOGE)&hl=en-US&gl=US&ceid=US%3Aen
+TRON_(TRX): https://news.google.com/search?q=TRON%20(TRX)&hl=en-US&gl=US&ceid=US%3Aen
+Toncoin_(TON): https://news.google.com/search?q=Toncoin%20(TON)&hl=en-US&gl=US&ceid=US%3Aen
+Polygon_(MATIC): https://news.google.com/search?q=Polygon%20(MATIC)&hl=en-US&gl=US&ceid=US%3Aen
+Polkadot_(DOT): https://news.google.com/search?q=Polkadot%20(DOT)&hl=en-US&gl=US&ceid=US%3Aen
+Litecoin_(LTC): https://news.google.com/search?q=Litecoin%20(LTC)&hl=en-US&gl=US&ceid=US%3Aen
+Avalanche_(AVAX): https://news.google.com/search?q=Avalanche%20(AVAX)&hl=en-US&gl=US&ceid=US%3Aen
+Shiba_Inu_(SHIB): https://news.google.com/search?q=Shiba%20Inu%20(SHIB)&hl=en-US&gl=US&ceid=US%3Aen
+Chainlink_(LINK): https://news.google.com/search?q=Chainlink%20(LINK)&hl=en-US&gl=US&ceid=US%3Aen
+Wrapped_Bitcoin_(WBTC): https://news.google.com/search?q=Wrapped%20Bitcoin%20(WBTC)&hl=en-US&gl=US&ceid=US%3Aen
+Bitcoin_Cash_(BCH): https://news.google.com/search?q=Bitcoin%20Cash%20(BCH)&hl=en-US&gl=US&ceid=US%3Aen
